--- a/index.html
+++ b/index.html
@@ -4,34 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Chatbot</title>
-    <style>
-        body { font-family: sans-serif; max-width: 600px; margin: auto; padding: 20px; }
-        #chatbox { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: scroll; margin-bottom: 10px; }
-        #chatForm { display: flex; }
-        #userInput { flex-grow: 1; padding: 8px; margin-right: 10px; border: 1px solid #ccc; border-radius: 4px; }
-        #sendButton { padding: 8px; }
-        .visually-hidden {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            padding: 0;
-            margin: -1px;
-            overflow: hidden;
-            clip: rect(0, 0, 0, 0);
-            white-space: nowrap;
-            border: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Chat with my n8n Bot</h1>
+
     <div id="chatbox"></div>
+
     <form id="chatForm">
         <label for="userInput" class="visually-hidden">Type your message</label>
         <input type="text" id="userInput" placeholder="Type your message..." autocomplete="off">
         <button type="submit" id="sendButton">Send</button>
     </form>
 
-    <script src="script.js"></script>
-</body>
-</html>
+    <script src="script
