updated script tag

--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
         <button type="submit" id="sendButton">Send</button>
     </form>
 
-    <script src="script
+    <script src="script.js"></script>
+
