--- a/index.html
+++ b/index.html
@@ -4,45 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat with my n8n Bot</title>
-
-  <!-- n8n Chat widget styles -->
-  <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
-
-  <style>
-    /* Optional custom styling */
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    /* Example: customize chat colors */
-    :root {
-      --chat--color-primary: #20b69e;
-      --chat--color-secondary: #e74266;
-      --chat--window--width: 400px;
-      --chat--window--height: 600px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Container for the chat widget -->
-  <div id="n8n-chat"></div>
+  <div class="chat-container">
+    <div id="chatbox" class="chatbox"></div>
 
-  <!-- n8n Chat script -->
-  <script type="module">
-    import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+    <form id="chatForm" class="chat-form">
+      <input
+        type="text"
+        id="userInput"
+        placeholder="Type your message..."
+        autocomplete="off"
+        required
+      />
+      <button id="sendButton" type="submit">Send</button>
+    </form>
+  </div>
 
-    createChat({
-      webhookUrl: 'https://saireddyg.app.n8n.cloud/webhook/4c172c9a-6e60-4634-8514-e35f09705888/chat',
-      target: '#n8n-chat',
-      mode: 'window',              // 'window' = floating chat bubble, 'fullscreen' = full page
-      showWelcomeScreen: false,    // skip welcome screen
-      initialMessages: [
-        'Hi there! 👋',
-        'I’m your n8n bot. How can I help you today?'
-      ],
-      enableStreaming: false       // set true if your workflow supports streaming responses
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
